--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beat</title>
+  <title>Homework got me stressin’, I need a lil peace break fr </title>
   <style>
     body {
       background-color: #000;
@@ -73,7 +73,7 @@
 
   <div class="video-container">
     <video id="myVideo" controls>
-      <source src="https://cdn.videy.co/pcuIPPwR1.mp4" type="video/mp4">
+      <source src="https://cdn.videy.co/eg7MM5WA1.mp4" type="video/mp4">
       Browser Anda tidak mendukung pemutar video.
     </video>
 
